[gd_scene load_steps=7 format=2]

[ext_resource path="res://botaobase.png" type="Texture" id=1]
[ext_resource path="res://enc_N.gd" type="Script" id=2]
[ext_resource path="res://assets/Sons/acertou.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 68.7258, 68.2399 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/Sniglet-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = SubResource( 2 )

[node name="N" type="Area2D" groups=[
"Quad_Enc",
]]
position = Vector2( 698.659, 274.112 )
scale = Vector2( 0.304314, 0.304314 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )
text_input = "N"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -92.0
margin_top = -92.0
margin_right = 94.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="somponto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
[connection signal="area_entered" from="." to="." method="_on_N_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_N_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
